# datacard-gen

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  datacard_gen.py  paper.bib  paper.md  pyproject.toml
src/datacard_gen/: __init__.py  _core.py  cli.py  generator.py  gui.py  models.py  schema.py
tests/: test_datacard_gen.py
