[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datacard-gen"
version = "0.1.0"
description = "Automated dataset documentation card generator following Datasheets for Datasets"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Vaibhav Deshmukh", email = "vdeshmukh203@gmail.com"}]
requires-python = ">=3.8"
keywords = ["dataset", "datacard", "datasheet", "documentation", "machine-learning", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Documentation",
]

[project.scripts]
datacard-gen = "datacard_gen:_cli"

[tool.setuptools]
py-modules = ["datacard_gen"]
